--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /test1/nbproject/private/
 /Lab5_SeleniumAutoGoogle/nbproject/private/
 /Lab6/nbproject/private/
+/Lab6/build/
+/Lab5_SeleniumAutoGoogle/build/
