--- a/Lab6/nbproject/project.properties
+++ b/Lab6/nbproject/project.properties
@@ -33,9 +33,173 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Lab6
 excludes=
+file.reference.auto-service-annotations-1.1.1-sources.jar=..\\Src\\selenium-java-4.21.0\\auto-service-annotations-1.1.1-sources.jar
+file.reference.auto-service-annotations-1.1.1.jar=..\\Src\\selenium-java-4.21.0\\auto-service-annotations-1.1.1.jar
+file.reference.byte-buddy-1.14.15-sources.jar=..\\Src\\selenium-java-4.21.0\\byte-buddy-1.14.15-sources.jar
+file.reference.byte-buddy-1.14.15.jar=..\\Src\\selenium-java-4.21.0\\byte-buddy-1.14.15.jar
+file.reference.checker-qual-3.42.0-sources.jar=..\\Src\\selenium-java-4.21.0\\checker-qual-3.42.0-sources.jar
+file.reference.checker-qual-3.42.0.jar=..\\Src\\selenium-java-4.21.0\\checker-qual-3.42.0.jar
+file.reference.commons-exec-1.4.0-sources.jar=..\\Src\\selenium-java-4.21.0\\commons-exec-1.4.0-sources.jar
+file.reference.commons-exec-1.4.0.jar=..\\Src\\selenium-java-4.21.0\\commons-exec-1.4.0.jar
+file.reference.error_prone_annotations-2.26.1-sources.jar=..\\Src\\selenium-java-4.21.0\\error_prone_annotations-2.26.1-sources.jar
+file.reference.error_prone_annotations-2.26.1.jar=..\\Src\\selenium-java-4.21.0\\error_prone_annotations-2.26.1.jar
+file.reference.failsafe-3.3.2-sources.jar=..\\Src\\selenium-java-4.21.0\\failsafe-3.3.2-sources.jar
+file.reference.failsafe-3.3.2.jar=..\\Src\\selenium-java-4.21.0\\failsafe-3.3.2.jar
+file.reference.failureaccess-1.0.2-sources.jar=..\\Src\\selenium-java-4.21.0\\failureaccess-1.0.2-sources.jar
+file.reference.failureaccess-1.0.2.jar=..\\Src\\selenium-java-4.21.0\\failureaccess-1.0.2.jar
+file.reference.guava-33.2.0-jre-sources.jar=..\\Src\\selenium-java-4.21.0\\guava-33.2.0-jre-sources.jar
+file.reference.guava-33.2.0-jre.jar=..\\Src\\selenium-java-4.21.0\\guava-33.2.0-jre.jar
+file.reference.j2objc-annotations-3.0.0-sources.jar=..\\Src\\selenium-java-4.21.0\\j2objc-annotations-3.0.0-sources.jar
+file.reference.j2objc-annotations-3.0.0.jar=..\\Src\\selenium-java-4.21.0\\j2objc-annotations-3.0.0.jar
+file.reference.jsr305-3.0.2-sources.jar=..\\Src\\selenium-java-4.21.0\\jsr305-3.0.2-sources.jar
+file.reference.jsr305-3.0.2.jar=..\\Src\\selenium-java-4.21.0\\jsr305-3.0.2.jar
+file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar=..\\Src\\selenium-java-4.21.0\\listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar
+file.reference.opentelemetry-api-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-api-1.38.0-sources.jar
+file.reference.opentelemetry-api-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-api-1.38.0.jar
+file.reference.opentelemetry-api-incubator-1.38.0-alpha-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-api-incubator-1.38.0-alpha-sources.jar
+file.reference.opentelemetry-api-incubator-1.38.0-alpha.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-api-incubator-1.38.0-alpha.jar
+file.reference.opentelemetry-context-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-context-1.38.0-sources.jar
+file.reference.opentelemetry-context-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-context-1.38.0.jar
+file.reference.opentelemetry-exporter-logging-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-exporter-logging-1.38.0-sources.jar
+file.reference.opentelemetry-exporter-logging-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-exporter-logging-1.38.0.jar
+file.reference.opentelemetry-sdk-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-1.38.0.jar
+file.reference.opentelemetry-sdk-common-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-common-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-common-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-common-1.38.0.jar
+file.reference.opentelemetry-sdk-extension-autoconfigure-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-extension-autoconfigure-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-extension-autoconfigure-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-extension-autoconfigure-1.38.0.jar
+file.reference.opentelemetry-sdk-extension-autoconfigure-spi-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-extension-autoconfigure-spi-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-extension-autoconfigure-spi-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-extension-autoconfigure-spi-1.38.0.jar
+file.reference.opentelemetry-sdk-logs-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-logs-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-logs-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-logs-1.38.0.jar
+file.reference.opentelemetry-sdk-metrics-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-metrics-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-metrics-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-metrics-1.38.0.jar
+file.reference.opentelemetry-sdk-trace-1.38.0-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-trace-1.38.0-sources.jar
+file.reference.opentelemetry-sdk-trace-1.38.0.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-sdk-trace-1.38.0.jar
+file.reference.opentelemetry-semconv-1.25.0-alpha-sources.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-semconv-1.25.0-alpha-sources.jar
+file.reference.opentelemetry-semconv-1.25.0-alpha.jar=..\\Src\\selenium-java-4.21.0\\opentelemetry-semconv-1.25.0-alpha.jar
+file.reference.selenium-api-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-api-4.21.0-sources.jar
+file.reference.selenium-api-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-api-4.21.0.jar
+file.reference.selenium-chrome-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-chrome-driver-4.21.0-sources.jar
+file.reference.selenium-chrome-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-chrome-driver-4.21.0.jar
+file.reference.selenium-chromium-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-chromium-driver-4.21.0-sources.jar
+file.reference.selenium-chromium-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-chromium-driver-4.21.0.jar
+file.reference.selenium-devtools-v123-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v123-4.21.0-sources.jar
+file.reference.selenium-devtools-v123-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v123-4.21.0.jar
+file.reference.selenium-devtools-v124-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v124-4.21.0-sources.jar
+file.reference.selenium-devtools-v124-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v124-4.21.0.jar
+file.reference.selenium-devtools-v125-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v125-4.21.0-sources.jar
+file.reference.selenium-devtools-v125-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v125-4.21.0.jar
+file.reference.selenium-devtools-v85-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v85-4.21.0-sources.jar
+file.reference.selenium-devtools-v85-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-devtools-v85-4.21.0.jar
+file.reference.selenium-edge-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-edge-driver-4.21.0-sources.jar
+file.reference.selenium-edge-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-edge-driver-4.21.0.jar
+file.reference.selenium-firefox-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-firefox-driver-4.21.0-sources.jar
+file.reference.selenium-firefox-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-firefox-driver-4.21.0.jar
+file.reference.selenium-http-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-http-4.21.0-sources.jar
+file.reference.selenium-http-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-http-4.21.0.jar
+file.reference.selenium-ie-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-ie-driver-4.21.0-sources.jar
+file.reference.selenium-ie-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-ie-driver-4.21.0.jar
+file.reference.selenium-java-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-java-4.21.0-sources.jar
+file.reference.selenium-java-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-java-4.21.0.jar
+file.reference.selenium-json-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-json-4.21.0-sources.jar
+file.reference.selenium-json-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-json-4.21.0.jar
+file.reference.selenium-manager-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-manager-4.21.0-sources.jar
+file.reference.selenium-manager-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-manager-4.21.0.jar
+file.reference.selenium-os-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-os-4.21.0-sources.jar
+file.reference.selenium-os-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-os-4.21.0.jar
+file.reference.selenium-remote-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-remote-driver-4.21.0-sources.jar
+file.reference.selenium-remote-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-remote-driver-4.21.0.jar
+file.reference.selenium-safari-driver-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-safari-driver-4.21.0-sources.jar
+file.reference.selenium-safari-driver-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-safari-driver-4.21.0.jar
+file.reference.selenium-server-standalone-3.141.59.jar=..\\Src\\selenium-java-4.21.0\\selenium-server-standalone-3.141.59.jar
+file.reference.selenium-support-4.21.0-sources.jar=..\\Src\\selenium-java-4.21.0\\selenium-support-4.21.0-sources.jar
+file.reference.selenium-support-4.21.0.jar=..\\Src\\selenium-java-4.21.0\\selenium-support-4.21.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.auto-service-annotations-1.1.1-sources.jar}:\
+    ${file.reference.auto-service-annotations-1.1.1.jar}:\
+    ${file.reference.byte-buddy-1.14.15-sources.jar}:\
+    ${file.reference.byte-buddy-1.14.15.jar}:\
+    ${file.reference.checker-qual-3.42.0-sources.jar}:\
+    ${file.reference.checker-qual-3.42.0.jar}:\
+    ${file.reference.commons-exec-1.4.0-sources.jar}:\
+    ${file.reference.commons-exec-1.4.0.jar}:\
+    ${file.reference.error_prone_annotations-2.26.1-sources.jar}:\
+    ${file.reference.error_prone_annotations-2.26.1.jar}:\
+    ${file.reference.failsafe-3.3.2-sources.jar}:\
+    ${file.reference.failsafe-3.3.2.jar}:\
+    ${file.reference.failureaccess-1.0.2-sources.jar}:\
+    ${file.reference.failureaccess-1.0.2.jar}:\
+    ${file.reference.guava-33.2.0-jre-sources.jar}:\
+    ${file.reference.guava-33.2.0-jre.jar}:\
+    ${file.reference.j2objc-annotations-3.0.0-sources.jar}:\
+    ${file.reference.j2objc-annotations-3.0.0.jar}:\
+    ${file.reference.jsr305-3.0.2-sources.jar}:\
+    ${file.reference.jsr305-3.0.2.jar}:\
+    ${file.reference.listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar}:\
+    ${file.reference.opentelemetry-api-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-api-1.38.0.jar}:\
+    ${file.reference.opentelemetry-api-incubator-1.38.0-alpha-sources.jar}:\
+    ${file.reference.opentelemetry-api-incubator-1.38.0-alpha.jar}:\
+    ${file.reference.opentelemetry-context-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-context-1.38.0.jar}:\
+    ${file.reference.opentelemetry-exporter-logging-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-exporter-logging-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-common-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-common-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-extension-autoconfigure-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-extension-autoconfigure-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-extension-autoconfigure-spi-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-extension-autoconfigure-spi-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-logs-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-logs-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-metrics-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-metrics-1.38.0.jar}:\
+    ${file.reference.opentelemetry-sdk-trace-1.38.0-sources.jar}:\
+    ${file.reference.opentelemetry-sdk-trace-1.38.0.jar}:\
+    ${file.reference.opentelemetry-semconv-1.25.0-alpha-sources.jar}:\
+    ${file.reference.opentelemetry-semconv-1.25.0-alpha.jar}:\
+    ${file.reference.selenium-api-4.21.0-sources.jar}:\
+    ${file.reference.selenium-api-4.21.0.jar}:\
+    ${file.reference.selenium-chrome-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-chrome-driver-4.21.0.jar}:\
+    ${file.reference.selenium-chromium-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-chromium-driver-4.21.0.jar}:\
+    ${file.reference.selenium-devtools-v123-4.21.0-sources.jar}:\
+    ${file.reference.selenium-devtools-v123-4.21.0.jar}:\
+    ${file.reference.selenium-devtools-v124-4.21.0-sources.jar}:\
+    ${file.reference.selenium-devtools-v124-4.21.0.jar}:\
+    ${file.reference.selenium-devtools-v125-4.21.0-sources.jar}:\
+    ${file.reference.selenium-devtools-v125-4.21.0.jar}:\
+    ${file.reference.selenium-devtools-v85-4.21.0-sources.jar}:\
+    ${file.reference.selenium-devtools-v85-4.21.0.jar}:\
+    ${file.reference.selenium-edge-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-edge-driver-4.21.0.jar}:\
+    ${file.reference.selenium-firefox-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-firefox-driver-4.21.0.jar}:\
+    ${file.reference.selenium-http-4.21.0-sources.jar}:\
+    ${file.reference.selenium-http-4.21.0.jar}:\
+    ${file.reference.selenium-ie-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-ie-driver-4.21.0.jar}:\
+    ${file.reference.selenium-java-4.21.0-sources.jar}:\
+    ${file.reference.selenium-java-4.21.0.jar}:\
+    ${file.reference.selenium-json-4.21.0-sources.jar}:\
+    ${file.reference.selenium-json-4.21.0.jar}:\
+    ${file.reference.selenium-manager-4.21.0-sources.jar}:\
+    ${file.reference.selenium-manager-4.21.0.jar}:\
+    ${file.reference.selenium-os-4.21.0-sources.jar}:\
+    ${file.reference.selenium-os-4.21.0.jar}:\
+    ${file.reference.selenium-remote-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-remote-driver-4.21.0.jar}:\
+    ${file.reference.selenium-safari-driver-4.21.0-sources.jar}:\
+    ${file.reference.selenium-safari-driver-4.21.0.jar}:\
+    ${file.reference.selenium-server-standalone-3.141.59.jar}:\
+    ${file.reference.selenium-support-4.21.0-sources.jar}:\
+    ${file.reference.selenium-support-4.21.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,7 +212,8 @@ javac.source=22
 javac.target=22
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.testng.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
