--- a/Lab5_SeleniumAutoGoogle/nbproject/project.properties
+++ b/Lab5_SeleniumAutoGoogle/nbproject/project.properties
@@ -212,7 +212,8 @@ javac.source=22
 javac.target=22
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.testng.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
